--- a/Vidly/Views/Customers/New.cshtml
+++ b/Vidly/Views/Customers/New.cshtml
@@ -13,7 +13,7 @@
         @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Birthdate)
+        <label for="Birthdate">Date of Birth</label>
         @Html.TextBoxFor(m => m.Birthdate, new { @class = "form-control" })
     </div>
     <div class="checkbox">
