--- a/Vidly/Content/Site.css
+++ b/Vidly/Content/Site.css
@@ -23,10 +23,14 @@ textarea {
     max-width: 280px;
 }
 
-.field-validation-error{
+.field-validation-error {
     color: red;
 }
 
 .input-validation-error {
     border: 2px solid red;
+}
+
+div .validation-summary-errors {
+    color: red;
 }
