--- a/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Views/Customers/CustomerForm.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Vidly.ViewModels.CustomerFormViewModel
 @{
-    ViewBag.Title = "New";
+    ViewBag.Title = "Customer Form";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>New Customer</h2>
+<h2>Customer</h2>
 
 @using (Html.BeginForm("Save", "Customers"))
 {
