--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -43,15 +43,17 @@ else
             $("#customers .js-delete").on("click", function () {
                 var button = $(this);
 
-                if (confirm("Are you sure you want to delete this customer?")) {
-                    $.ajax({
+                bootbox.confirm("Are you sure you want to delete this customer?", function (result) {
+                    if (result) {
+                        $.ajax({
                         url: "/api/customers/" + button.attr("data-customer-id"),
                         method: "DELETE",
                         success: function () {
                             button.parents("tr").remove();
                         }
                     });
-                }
+                    }
+                });
             });
         });
     </script>
