Add Toastr notifications

--- a/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Views/Rentals/New.cshtml
@@ -90,9 +90,9 @@
                     method: "post",
                     data: vm
                 }).done(function () {
-                    console.log("Done");
+                    toastr.success("Rental successfully recorded.");
                 }).fail(function () {
-
+                    toastr.error("Something unexpected happend.");
                 });
             });
         });
