--- a/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Views/Rentals/New.cshtml
@@ -9,14 +9,14 @@
     <div class="form-group">
         <label>Customer</label>
         <div class="tt-container">
-            <input id="customer" required type="text" value="" class="form-control" />
+            <input id="customer" name="customer" data-rule-validCustomer="true" required type="text" value="" class="form-control" />
         </div>
     </div>
 
     <div class="form-group">
         <label>Movie</label>
         <div class="tt-container">
-            <input id="movie" type="text" value="" class="form-control" />
+            <input id="movie" name="movie" data-rule-movieSelected="true" type="text" value="" class="form-control" />
         </div>
     </div>
 
@@ -83,19 +83,35 @@
                 vm.movieIds.push(movie.id);
             });
 
-            $("#newRental").validate({
-                submitHandler: function () {
-                    e.preventDefault();
+            $.validator.addMethod("validCustomer", function () {
+                return vm.customerId && vm.customerId !== 0;
+            }, "Please select a valid customer.");
 
+            $.validator.addMethod("movieSelected", function () {
+                return vm.movieIds.length > 0;
+            }, "Please select at least one movie.");
+
+            var validator = $("#newRental").validate({
+                submitHandler: function () {
                     $.ajax({
                         url: "/api/newRentals",
                         method: "post",
                         data: vm
                     }).done(function () {
                         toastr.success("Rental successfully recorded.");
+
+                        $("#customer").typeahead("val", "");
+                        $("#movie").typeahead("val", "");
+                        $("#movies").empty();
+
+                        vm = { movieIds: [] };
+
+                        validator.resetForm();
                     }).fail(function () {
                         toastr.error("Something unexpected happend.");
                     });
+
+                    return false;
                 }
             });
         });
